<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/network_required"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:layout_margin="@dimen/view_margin" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/networkOptions"
        android:layout_margin="@dimen/view_margin" >

        <RadioButton
            android:text="@string/none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/noNetwork"
            android:checked="true" />

        <RadioButton
            android:text="@string/any"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/anyNetwork" />

        <RadioButton
            android:text="@string/wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/wifiNetwork" />

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule_job"
        android:onClick="scheduleJob"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/view_margin" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_job"
        android:onClick="cancelJob"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/view_margin" />


</LinearLayout>